# clinic_scheduling_agent

./: .env.example  .gitignore  AGENTIC_DESIGN.md  DOCKER_GUIDE.md  DOCKER_QUICK_START.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt  startup.txt
app/: main.py
app/api/v1/: chat.py
app/core/: config.py  prompts.py
app/schemas/: chat.py
app/services/: agent_service.py  chat_history_service.py  db_service.py  google_calender_service.py  llm_not_agent_services.py  llm_service.py  mock_llm_service.py  ollama_services.py  persistent_short_memory.py  reservation_service.py  summary_service.py
app/services/scheduling_agent/: graph.py  nodes.py  state.py
app/static/: index.html
app/utils/: date_parser.py
