[project]
name = "clinic-scheduling-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.1.10",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.0",
    "uvicorn>=0.46.0",
]
