[project]
name = "clinic-scheduling-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-cli>=2.0.65",
    "dateparser>=1.4.0",
    "fastapi>=0.136.1",
    "grandalf>=0.8",
    "ipython>=9.13.0",
    "langchain>=1.2.18",
    "langchain-google-genai>=4.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "motor>=3.7.1",
    "pydantic-settings>=2.14.0",
    "pymermaid>=1.7.1",
    "pytz>=2026.2",
    "uvicorn>=0.46.0",
]
